fix: implements `--grid-gap` variable

--- a/src/styles/AskGPT.less
+++ b/src/styles/AskGPT.less
@@ -1,6 +1,6 @@
 .askGpt {
 	display: grid;
-	grid-gap: 8px;
+	grid-gap: var(--grid-gap);
 	padding: 16px 0px;
 
 	.inputArea {
