--- a/src/styles/Contact.less
+++ b/src/styles/Contact.less
@@ -1,4 +1,7 @@
 .contact {
+	display: grid;
+	grid-gap: var(--grid-gap);
+
 	a {
 	  color: #0f0;
 	  text-decoration: underline;
