--- a/src/styles/Terminal.less
+++ b/src/styles/Terminal.less
@@ -24,7 +24,7 @@
   
 	  .terminalOutput {
 		display: grid;
-		grid-gap: 8px;
+		grid-gap: calc(var(--grid-gap) * 2);
 		margin-bottom: 10px;
 	  }
   
