--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -2,6 +2,8 @@
 	// CSS Reset in LESS
 
 html {
+  --grid-gap: 8px;
+
 	box-sizing: border-box;
 	font-size: 16px;
   color: #0f0;
